--- a/st.css
+++ b/st.css
@@ -7,7 +7,8 @@
     display: block;
     position: relative;
     width: 100%;
-    height: 4rem;
+    height: 72px;
+    padding: 0 15px;
     background-color: white;
     box-shadow: 0 2px 4px rgb(0 0 0 / 8%), 0 4px 12px rgb(0 0 0 / 8%);
     z-index: 1010;
@@ -24,9 +25,8 @@
 .navigation{
     display:flex;
     width: 100%;
-    height: 4rem;
 }
-.nav{
+.nav3{
     margin: 0rem 0.4rem;
     width: 5.5rem;
     text-align: center;
@@ -34,13 +34,13 @@
 }
 .nav1{
     margin: 0rem 0.4rem;
-    width: 7rem;
+    width: 9rem;
     text-align: center;
     position: relative;
 }
 .nav2{
     margin: 0rem 0.2rem;
-    width: 5rem;
+    width: 6rem;
     text-align: center;
     position: relative;
 }
@@ -51,7 +51,7 @@
     padding: 0.7rem 0;
 }
 .cen{
-    padding: 1.4rem 0 0.9rem 0;
+    padding: 1.2rem 0 0 0;
 }
 a{
     color:black;
@@ -64,10 +64,12 @@ a{
 .out p{
     color:white;
 }
-.nav.search{
-    width:50%;
+.nav3.search{
+    width:45%;
     text-align:left;
-    padding: 0.7rem 0 0.5rem 0;
+    padding: 0.7rem 0 0.3rem 0;
+    height: 65px;
+    min-width: 470px;
 }
 .formo{
     position:relative;
@@ -75,27 +77,29 @@ a{
     border-radius: 9999px;
     width: 100%;
     height: 100%;
+    background-color: #F7F9FA;
 }
 .formo button{
     margin: 0.4rem 0.4rem 0 .8rem;
-    width: 5%;
-    height:75%;
-    background-color: white;
+    width: 35px;
+    height:30px;
+    background-color: #F7F9FA;
     border: 0 white ;
 }
 .formo input[type=text]{
     position: absolute;
     height: 70%;
-    width: 80%;
-    top:10%;
-    left: 8%;
+    width: 85%;
+    top:7px;
+    left: 55px;
     border: 0 white;
     outline: none;
     font-size: 1rem;
+    background-color: #F7F9FA;
 }
 .buttono{
     border: 1px black solid;
-    margin-top: -0.5rem;
+    
     padding: 0.5rem 0.1rem;
     width: 90%;
     height: 75%;
@@ -115,7 +119,7 @@ a{
     background-color: white;
     box-shadow: 0 2px 4px rgb(0 0 0 / 8%), 0 4px 12px rgb(0 0 0 / 8%);
     height: 65%;
-    width: 30%;
+    width: 25rem;
     text-align: left;
     font-size: 1.5rem;
     
@@ -130,7 +134,7 @@ a{
 }
 
 .main{
-    width:87%;
+    width:100%;
     height:fit-content;
     padding: 1rem 6.5%;
 }
@@ -149,6 +153,7 @@ a{
     margin-bottom: .4rem;
 }
 .acourse img{
+    width:230px;
     border:#D1D6DC 1px solid;
 }
 .listo:hover p{
@@ -190,8 +195,8 @@ button:hover{
 .list ul li{
     display: block;
     font-weight: bold;
-    height: 1.2rem;
-    padding: 0.6rem 1.4rem 0.6rem 0;
+    height: 1.5rem;
+    padding: 0 1rem 0 0;
     text-align: center;
     color: #6a6b6a;
 }
@@ -200,8 +205,18 @@ button:hover{
     font-weight: bold;
     color: black;
 }
+@media (max-width: 1270px){
+    .nav1.bussiness{
+        display: none;
+    }
+}
+@media (max-width: 1160px){
+    .nav1.tech{
+        display: none;
+    }
+}
 @media (max-width: 1085px) {
-    .nav , .nav2 , .nav1{
+    .nav3 , .nav2 , .nav1{
         display: none;
     }
     .small-list{
